# Lesson2

./: .gitignore  Lesson2.sln
.github/workflows/: cmake-multi-platform.yml
ConsoleApplication1/: .gitignore  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Test.cpp  function_for_sort.cpp  ipAdress.cpp  ipAdress.h  ip_filter.tsv
